# Pix-R-Picks-Backend

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  movie_scores.py  pdf_reader.ipynb  pyproject.toml  requirements.txt  text_analyzation.ipynb
accounts/: models.py
accounts/migrations/: 0001_initial.py
favorites/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
favorites/migrations/: 0001_initial.py
movie_txts/: a_bugs_life_file.txt  brave_file.txt  cars_2_file.txt  cars_3_file.txt  cars_file.txt  coco_file.txt  finding_dory_file.txt  finding_nemo_file.txt  frozen_file.txt  good_dino_file.txt  incredibles_2_file.txt  incredibles_file.txt  inside_out_file.txt  monsters_inc_file.txt  monsters_university_file.txt  onward_file.txt  ratatouille_file.txt  soul_file.txt  toy_story_2_file.txt  toy_story_3_file.txt  toy_story_4_file.txt  toy_story_file.txt  train_dragon_file.txt  up_file.txt  wall-e_file.txt
movies/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_auto_20211104_0323.py
pix_r_picks_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  movie_list.html
